kubernetes/dev/base/tusd/authorization-policy.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: tusd-request-authentication
spec:
  jwtRules:
    - issuer: https://accounts.127.0.0.1.nip.io/auth/realms/jkanda
      # TODO jwksUri by default and override in dev
      #jwksUri: https://raw.githubusercontent.com/istio/istio/release-1.6/security/tools/jwt/samples/jwks.json
      #jwksUri: http://keycloak:8080/auth/realms/jkanda/protocol/openid-connect/certs
      #jwksUri: https://accounts.jkanda.fr/auth/realms/jkanda/protocol/openid-connect/certs
      jwks: '{"keys":[{"kid":"sB4fmxXeOhWISqhnKKxGceJ-mCvDoV9mc3KlvR9Z4kI","kty":"RSA","alg":"RS256","use":"sig","n":"nDmx1e4t-THqX4tVGxC8jE363kUXgSZsHG3w1T9-M-Yc91Yo7DkIryYYVxjXD2Sd48lEVcspHvpDPctrnOP0vqmhLxV-Gp2TKRapbl1Jfdn6kqPJcl0uSaci5w-7tesAOHYa5lTI17EeXVUp9e864Ruobg4L1dcAY7-4yy6rXHu_CRUtX9307VZ3R6rZcxbgxR0UMJSy0IScAlYwupZS-WiR_zmGQl_zftNC9s_8IW2e6Xf8gWBk_ajjthIwYYzNLQmDqNpiPE59mYjO98ZeV4_6idv8I8oKMIqyEsTmmWqX8EYI8itksBkF24dZWYtLXoaiVBzHjtofWFgHX9fucw","e":"AQAB","x5c":["MIICmzCCAYMCBgFyTYm [...]
