kubernetes/dev/base/tusd/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tusd-virtualservice
spec:
  hosts:
    - "127.0.0.1.nip.io"
